--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:35432/skarbnik
-spring.datasource.username=solo
-spring.datasource.password=password
+spring.datasource.url: ${JDBC_DATABASE_URL:}
